2007-11-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: Fix the double free, but for some reason it shows the initial 
	dialog again.

2007-11-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h: Added save_and_get_content(), 
	so I can manipulate a temporary copy of the document and then load it properly.
	* glom/application.cc:
	on_menu_file_open(): When openeing a browsed document, use a temporary instance 
	of the document class (incredibly inefficiently) to mark the document as 
	not self-hosted. This now actually opens the file, but then it crashes with a 
	double free warning.

2007-11-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: Don't provide the service type twice to 
	aui_service_dialog_set_browse_service_types(), so we don't get 
	an unnecessary type column.
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: avahi_start_publishing(): 
	Mention the document name in the published service name, to make 
	browsing more sensible.

2007-11-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Added set_get_document_func().
	This avoids us having to link to the application (not in libglom) 
	to get the document from it.
	avahi_start_publishing(): Publish the document contents via a 
	callback, though this needs a change in libepc to copy the data.

	* configure.in: Depend on avahi-ui, so we can show the 
	browse dialog.
	* glom/application.cc:
	* glom/application.h:
	Added ui_file_select_open_with_browse() which adds a browse 
	network button to the file chooser dialog and then gets the server 
	details after asking the user to browse.
	on_menu_file_open(): Use ui_file_select_open_with_browse() instead 
	of regular ui_file_select_open(). Use the new 
	Bakery::App_WithDoc::open_document_from_data() if opening over the 
	network.
